force-app/main/default/objects/ExpoSchedule__c/ExpoSchedule__c.object-meta.xml
<CustomObject>
    <label>ExpoSchedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoSchedules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>