force-app/main/default/objects/ExpoSchedule__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>