force-app/main/default/objects/ExpoSchedule__c/fields/ExpoDay__c.field-meta.xml
<CustomField>
    <fullName>ExpoDay__c</fullName>
    <label>Expo Day</label>
    <type>Date</type>
</CustomField>