force-app/main/default/objects/ExpoSchedule__c/fields/ExpoDayEnd__c.field-meta.xml
<CustomField>
    <fullName>ExpoDayEnd__c</fullName>
    <label>ExpoDayEnd</label>
    <type>Date</type>
</CustomField>