force-app/main/default/objects/ExpoSchedule__c/fields/ExpoId__c.field-meta.xml
<CustomField>
    <fullName>ExpoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ExpoId</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>ExpoSchedules</relationshipLabel>
    <relationshipName>ExpoSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>