force-app/main/default/objects/ExpoSchedule__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>