force-app/main/default/objects/ExpoSchedule__c/validationRules/The_end_time_must_be_later_than_the_star.validationRule-meta.xml
<ValidationRule>
    <fullName>The_end_time_must_be_later_than_the_star</fullName>
    <active>true</active>
    <description>The end time must be later than the start time</description>
    <errorConditionFormula>EndTime__c &lt;  StartTime__c</errorConditionFormula>
    <errorMessage>The End Time must be later than the Start Time!</errorMessage>
</ValidationRule>